--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wordle Clone!</title>
+    <title>Wordle</title>
 
     <script src="main.js"></script>
 
@@ -21,7 +21,6 @@
         <header>
           <h1 class="title">WORDLE</h1>
         </header>
-
         <div id="board-container">
           <div id="board"></div>
         </div>
